--- a/projet_optimisation.ipynb
+++ b/projet_optimisation.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
             "Requirement already satisfied: openpyxl in /usr/local/lib/python3.12/dist-packages (3.1.5)\n",
@@ -59,6 +45,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LNSj8_K9q2LT",
+        "outputId": "343078f4-a2bf-4ebb-84bd-e98d15e40592"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import geopandas as gpd\n",
@@ -166,26 +161,26 @@
         "\n",
         "        for col in colonnes_possibles:\n",
         "            if col in gdf.columns:\n",
-        "                print(f\"     ✅ Colonne ID détectée pour {nom_type}: '{col}'\")\n",
+        "                print(f\" Colonne ID détectée pour {nom_type}: '{col}'\")\n",
         "                return col\n",
         "\n",
-        "        print(f\"     ⚠️  Aucune colonne ID trouvée pour {nom_type}\")\n",
+        "        print(f\" Aucune colonne ID trouvée pour {nom_type}\")\n",
         "        return None\n",
         "\n",
         "    def charger_donnees(self):\n",
         "        \"\"\"Charge toutes les données (XLSX + Shapefiles)\"\"\"\n",
-        "        print(\"📊 Chargement des données...\")\n",
+        "        print(\"Chargement des données...\")\n",
         "\n",
         "        # Charger le fichier XLSX\n",
         "        self.df_reseau = pd.read_excel(self.xlsx_path)\n",
-        "        print(f\"  ✅ {len(self.df_reseau)} lignes chargées du fichier réseau\")\n",
+        "        print(f\"{len(self.df_reseau)} lignes chargées du fichier réseau\")\n",
         "\n",
         "        # Charger les shapefiles\n",
         "        self.gdf_infrastructures = gpd.read_file(self.shp_infra_path)\n",
         "        self.gdf_batiments = gpd.read_file(self.shp_bat_path)\n",
         "\n",
-        "        print(f\"  ✅ {len(self.gdf_infrastructures)} infrastructures géospatiales\")\n",
-        "        print(f\"  ✅ {len(self.gdf_batiments)} bâtiments géospatiaux\")\n",
+        "        print(f\" {len(self.gdf_infrastructures)} infrastructures géospatiales\")\n",
+        "        print(f\" {len(self.gdf_batiments)} bâtiments géospatiaux\")\n",
         "\n",
         "        # Détecter automatiquement la colonne ID\n",
         "        self.col_id_infra = self._detecter_colonne_id(self.gdf_infrastructures, 'infrastructure')\n",
@@ -235,7 +230,7 @@
         "        for bat in self.batiments.values():\n",
         "            bat.calculer_difficulte()\n",
         "\n",
-        "        print(f\"\\n✅ Modèle créé:\")\n",
+        "        print(f\"\\n Modèle créé:\")\n",
         "        print(f\"   • {len(self.batiments)} bâtiments\")\n",
         "        print(f\"   • {len(self.infrastructures)} infrastructures\")\n",
         "        print(f\"   • {sum(b.nb_maisons for b in self.batiments.values())} maisons au total\\n\")\n",
@@ -249,13 +244,13 @@
         "                phase_0.append(bat)\n",
         "\n",
         "        nb_maisons_phase_0 = sum(b.nb_maisons for b in phase_0)\n",
-        "        print(f\"🟢 Phase 0: {len(phase_0)} bâtiments déjà raccordés ({nb_maisons_phase_0} maisons)\")\n",
+        "        print(f\"Phase 0: {len(phase_0)} bâtiments déjà raccordés ({nb_maisons_phase_0} maisons)\")\n",
         "        return phase_0\n",
         "\n",
         "    def planifier_raccordement(self):\n",
         "        \"\"\"Algorithme principal de planification avec affichage simplifié\"\"\"\n",
         "        print(\"\\n\" + \"=\"*70)\n",
-        "        print(\"🔧 PLANIFICATION DES RACCORDEMENTS\")\n",
+        "        print(\"PLANIFICATION DES RACCORDEMENTS\")\n",
         "        print(\"=\"*70 + \"\\n\")\n",
         "\n",
         "        # Phase 0: Bâtiments déjà raccordés\n",
@@ -272,7 +267,7 @@
         "        cout_total = 0\n",
         "        total_bat = len(batiments_a_raccorder)\n",
         "\n",
-        "        print(f\"📋 {total_bat} bâtiments à raccorder\\n\")\n",
+        "        print(f\"{total_bat} bâtiments à raccorder\\n\")\n",
         "        print(\"Progression du raccordement:\")\n",
         "        print(\"-\" * 70)\n",
         "\n",
@@ -333,9 +328,9 @@
         "\n",
         "        print(\"-\" * 70)\n",
         "        print(f\"\\n{'='*70}\")\n",
-        "        print(\"✅ PLANIFICATION TERMINÉE\")\n",
+        "        print(\" PLANIFICATION TERMINÉE\")\n",
         "        print(f\"{'='*70}\")\n",
-        "        print(f\"\\n📊 Résumé:\")\n",
+        "        print(f\"\\n Résumé:\")\n",
         "        print(f\"   • Nombre de phases: {phase - 1}\")\n",
         "        print(f\"   • Maisons raccordées: {total_maisons_raccordees}\")\n",
         "        print(f\"   • Coût total: {cout_total:.2f}m\")\n",
@@ -348,7 +343,7 @@
         "    def analyser_mutualisation(self):\n",
         "        \"\"\"Analyse les opportunités de mutualisation\"\"\"\n",
         "        print(\"=\"*70)\n",
-        "        print(\"🔄 ANALYSE DE LA MUTUALISATION\")\n",
+        "        print(\" ANALYSE DE LA MUTUALISATION\")\n",
         "        print(\"=\"*70 + \"\\n\")\n",
         "\n",
         "        mutualisations = []\n",
@@ -370,7 +365,7 @@
         "\n",
         "        if mutualisations:\n",
         "            df_mut = pd.DataFrame(mutualisations).sort_values('efficacite', ascending=False)\n",
-        "            print(f\"🎯 {len(mutualisations)} infrastructures mutualisées détectées\\n\")\n",
+        "            print(f\"{len(mutualisations)} infrastructures mutualisées détectées\\n\")\n",
         "            print(f\"Top 10 infrastructures les plus efficaces:\")\n",
         "            print(df_mut.head(10).to_string(index=False))\n",
         "\n",
@@ -381,7 +376,7 @@
         "            )\n",
         "            total_maisons = sum(b.nb_maisons for b in self.batiments.values())\n",
         "\n",
-        "            print(f\"\\n📊 Statistiques de mutualisation:\")\n",
+        "            print(f\"\\n Statistiques de mutualisation:\")\n",
         "            print(f\"   • Bâtiments concernés: {len(batiments_mutualises)}/{len(self.batiments)} \"\n",
         "                  f\"({100*len(batiments_mutualises)/len(self.batiments):.1f}%)\")\n",
         "            print(f\"   • Maisons concernées: {nb_maisons_mutualises}/{total_maisons} \"\n",
@@ -395,7 +390,7 @@
         "\n",
         "    def generer_rapport(self, output_path: str = \"rapport_raccordement.xlsx\"):\n",
         "        \"\"\"Génère un rapport Excel du plan de raccordement\"\"\"\n",
-        "        print(f\"📄 Génération du rapport Excel...\")\n",
+        "        print(f\" Génération du rapport Excel...\")\n",
         "\n",
         "        with pd.ExcelWriter(output_path, engine='openpyxl') as writer:\n",
         "            # Feuille 1: Plan de raccordement\n",
@@ -426,19 +421,19 @@
         "            df_infra = pd.DataFrame(infras_data).sort_values('difficulte')\n",
         "            df_infra.to_excel(writer, sheet_name='Infrastructures', index=False)\n",
         "\n",
-        "        print(f\"   ✅ Rapport généré: {output_path}\\n\")\n",
+        "        print(f\" Rapport généré: {output_path}\\n\")\n",
         "        return df_plan\n",
         "\n",
         "    def visualiser_plan(self, output_path: str = \"carte_raccordement.png\"):\n",
         "        \"\"\"Génère une carte du plan de raccordement\"\"\"\n",
-        "        print(f\"🗺️  Génération de la carte...\")\n",
+        "        print(f\"Génération de la carte...\")\n",
         "\n",
         "        if self.gdf_infrastructures is None or self.gdf_batiments is None:\n",
-        "            print(\"   ⚠️  Shapefiles non chargés\\n\")\n",
+        "            print(\"  Shapefiles non chargés\\n\")\n",
         "            return\n",
         "\n",
         "        if self.col_id_infra is None or self.col_id_bat is None:\n",
-        "            print(\"   ⚠️  Colonnes ID non détectées\\n\")\n",
+        "            print(\" Colonnes ID non détectées\\n\")\n",
         "            return\n",
         "\n",
         "        fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
@@ -492,7 +487,7 @@
         "\n",
         "        plt.tight_layout()\n",
         "        plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
-        "        print(f\"   ✅ Carte sauvegardée: {output_path}\\n\")\n",
+        "        print(f\" Carte sauvegardée: {output_path}\\n\")\n",
         "        plt.close()\n",
         "\n",
         "\n",
@@ -500,7 +495,7 @@
         "def main(xlsx_path: str, shp_infra_path: str, shp_bat_path: str):\n",
         "    \"\"\"Point d'entrée principal\"\"\"\n",
         "    print(\"\\n\" + \"=\"*70)\n",
-        "    print(\"🏗️  PLANIFICATION DU RACCORDEMENT ÉLECTRIQUE\")\n",
+        "    print(\"PLANIFICATION DU RACCORDEMENT ÉLECTRIQUE\")\n",
         "    print(\"=\"*70 + \"\\n\")\n",
         "\n",
         "    planificateur = PlanificateurRaccordement(xlsx_path, shp_infra_path, shp_bat_path)\n",
@@ -511,7 +506,7 @@
         "    planificateur.visualiser_plan()\n",
         "\n",
         "    print(\"=\"*70)\n",
-        "    print(\"✅ PROCESSUS TERMINÉ\")\n",
+        "    print(\"PROCESSUS TERMINÉ\")\n",
         "    print(\"=\"*70 + \"\\n\")\n",
         "\n",
         "    return planificateur, rapport\n",
@@ -524,116 +519,15 @@
         "    shp_bat_path = \"batiments.shp\"\n",
         "\n",
         "    planificateur, rapport = main(xlsx_path, shp_infra_path, shp_bat_path)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LNSj8_K9q2LT",
-        "outputId": "343078f4-a2bf-4ebb-84bd-e98d15e40592"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "======================================================================\n",
-            "🏗️  PLANIFICATION DU RACCORDEMENT ÉLECTRIQUE\n",
-            "======================================================================\n",
-            "\n",
-            "📊 Chargement des données...\n",
-            "  ✅ 6107 lignes chargées du fichier réseau\n",
-            "  ✅ 644 infrastructures géospatiales\n",
-            "  ✅ 381 bâtiments géospatiaux\n",
-            "     ✅ Colonne ID détectée pour infrastructure: 'infra_id'\n",
-            "     ✅ Colonne ID détectée pour bâtiment: 'id_bat'\n",
-            "\n",
-            "✅ Modèle créé:\n",
-            "   • 381 bâtiments\n",
-            "   • 644 infrastructures\n",
-            "   • 389 maisons au total\n",
-            "\n",
-            "\n",
-            "======================================================================\n",
-            "🔧 PLANIFICATION DES RACCORDEMENTS\n",
-            "======================================================================\n",
-            "\n",
-            "🟢 Phase 0: 296 bâtiments déjà raccordés (304 maisons)\n",
-            "📋 85 bâtiments à raccorder\n",
-            "\n",
-            "Progression du raccordement:\n",
-            "----------------------------------------------------------------------\n",
-            "[░░░░░░░░░░░░░░░░░░░░]   1.2% | Phase   1 | Coût:    37.55m | Maisons: 305\n",
-            "[█░░░░░░░░░░░░░░░░░░░]   9.4% | Phase   8 | Coût:    68.36m | Maisons: 312\n",
-            "[███░░░░░░░░░░░░░░░░░]  18.8% | Phase  16 | Coût:   199.78m | Maisons: 320\n",
-            "[█████░░░░░░░░░░░░░░░]  28.2% | Phase  24 | Coût:   311.55m | Maisons: 328\n",
-            "[███████░░░░░░░░░░░░░]  37.6% | Phase  32 | Coût:   510.20m | Maisons: 336\n",
-            "[█████████░░░░░░░░░░░]  47.1% | Phase  40 | Coût:   641.68m | Maisons: 344\n",
-            "[███████████░░░░░░░░░]  56.5% | Phase  48 | Coût:   825.60m | Maisons: 352\n",
-            "[█████████████░░░░░░░]  65.9% | Phase  56 | Coût:  1000.68m | Maisons: 360\n",
-            "[███████████████░░░░░]  75.3% | Phase  64 | Coût:  1193.95m | Maisons: 368\n",
-            "[████████████████░░░░]  84.7% | Phase  72 | Coût:  1400.83m | Maisons: 376\n",
-            "[██████████████████░░]  94.1% | Phase  80 | Coût:  1712.60m | Maisons: 384\n",
-            "[████████████████████] 100.0% | Phase  85 | Coût:  1932.99m | Maisons: 389\n",
-            "----------------------------------------------------------------------\n",
-            "\n",
-            "======================================================================\n",
-            "✅ PLANIFICATION TERMINÉE\n",
-            "======================================================================\n",
-            "\n",
-            "📊 Résumé:\n",
-            "   • Nombre de phases: 85\n",
-            "   • Maisons raccordées: 389\n",
-            "   • Coût total: 1932.99m\n",
-            "   • Coût moyen/maison: 4.97m\n",
-            "   • Infrastructures réparées: 197/644\n",
-            "\n",
-            "======================================================================\n",
-            "🔄 ANALYSE DE LA MUTUALISATION\n",
-            "======================================================================\n",
-            "\n",
-            "🎯 190 infrastructures mutualisées détectées\n",
-            "\n",
-            "Top 10 infrastructures les plus efficaces:\n",
-            "infra_id          type  nb_batiments  nb_maisons  longueur  efficacite phase_reparation\n",
-            " P000181 infra_intacte           322         327  6.189343   52.832751              N/A\n",
-            " P000292 infra_intacte           226         329  7.445240   44.189308              N/A\n",
-            " P007111 infra_intacte           381         422 12.314461   34.268653              N/A\n",
-            " P000046 infra_intacte           226         284  8.304525   34.198222              N/A\n",
-            " P000290 infra_intacte           226         237  8.476727   27.958906              N/A\n",
-            " P000372 infra_intacte           124         126 10.042853   12.546236              N/A\n",
-            " P000394 infra_intacte           321         326 37.518306    8.689092              N/A\n",
-            " P007982 infra_intacte           337         342 49.956115    6.846009              N/A\n",
-            " P005100   a_remplacer            32          41  6.259757    6.549775                1\n",
-            " P000317 infra_intacte           226         332 54.690026    6.070577              N/A\n",
-            "\n",
-            "📊 Statistiques de mutualisation:\n",
-            "   • Bâtiments concernés: 381/381 (100.0%)\n",
-            "   • Maisons concernées: 389/389 (100.0%)\n",
-            "   • Longueur totale mutualisée: 4296.91m\n",
-            "   • Efficacité moyenne: 1.99 maisons/m\n",
-            "\n",
-            "📄 Génération du rapport Excel...\n",
-            "   ✅ Rapport généré: rapport_raccordement.xlsx\n",
-            "\n",
-            "🗺️  Génération de la carte...\n",
-            "   ✅ Carte sauvegardée: carte_raccordement.png\n",
-            "\n",
-            "======================================================================\n",
-            "✅ PROCESSUS TERMINÉ\n",
-            "======================================================================\n",
-            "\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2c342fbb"
       },
+      "outputs": [],
       "source": [
         "# Load the shapefiles to inspect their column names\n",
         "try:\n",
@@ -646,9 +540,21 @@
         "    print(gdf_batiments_cols.columns)\n",
         "except Exception as e:\n",
         "    print(f\"Error loading shapefiles: {e}\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
