--- a/projet_optimisation.ipynb
+++ b/projet_optimisation.ipynb
@@ -91,7 +91,7 @@
         "        return self.type == 'infra_intacte' or self.est_reparee\n",
         "\n",
         "    def __repr__(self):\n",
-        "        status = \"✅\" if self.est_operationnelle() else \"❌\"\n",
+        "        status = \"oui\" if self.est_operationnelle() else \"non\"\n",
         "        return f\"{status} Infra({self.id}, L={self.longueur:.1f}m, {self.nb_maisons_total} maisons, diff={self.difficulte:.2f})\"\n",
         "\n",
         "\n",
@@ -128,7 +128,7 @@
         "        return [infra for infra in self.infrastructures if not infra.est_operationnelle()]\n",
         "\n",
         "    def __repr__(self):\n",
-        "        status = \"🟢\" if self.est_raccorde() else \"🔴\"\n",
+        "        status = \"oui\" if self.est_raccorde() else \"non\"\n",
         "        return f\"{status} Bat({self.id}, {self.nb_maisons} maisons, diff={self.difficulte_totale:.2f}, phase={self.phase})\"\n",
         "\n",
         "\n",
