--- a/code.ipynb
+++ b/code.ipynb
@@ -316,7 +316,7 @@
     "        df = pd.read_csv(path)\n",
     "    return std_cols(df)\n",
     "\n",
-    "# --------- 1) Chargement & validation ----------\n",
+    "\n",
     "df = read_table(PATH, SHEET)\n",
     "\n",
     "required = {\"id_batiment\", \"infra_id\", \"longueur\", \"nb_maisons\"}\n",
@@ -330,7 +330,7 @@
     "df[\"longueur\"]    = pd.to_numeric(df[\"longueur\"], errors=\"coerce\").fillna(0.0)\n",
     "df[\"nb_maisons\"]  = pd.to_numeric(df[\"nb_maisons\"], errors=\"coerce\").fillna(1).astype(int)\n",
     "\n",
-    "# 2) Construction des objets \n",
+    "#  Construction des objets \n",
     "# Liste unique des bâtiments et des infrastructures\n",
     "batiments = (\n",
     "    df.groupby(\"id_batiment\", as_index=False)[\"nb_maisons\"]\n",
@@ -350,7 +350,7 @@
     "# Ensemble des infras déjà réparées\n",
     "repaired_infras = set()\n",
     "\n",
-    "# 3) Calcul difficulté \n",
+    "#  Calcul difficulté \n",
     "def building_incremental_cost(b_id):\n",
     "    rows = bat2infra[bat2infra[\"id_batiment\"] == b_id]\n",
     "    if rows.empty:\n",
@@ -362,7 +362,7 @@
     "    incr_infras = list(rows[\"infra_id\"].unique())\n",
     "    return incr_cost, incr_infras\n",
     "\n",
-    "# 4) Phase 0 \n",
+    "#  Phase 0 \n",
     "# Si rien n’indique des infras déjà OK, la phase 0 est vide (conforme plan strict)\n",
     "ordre_rows = []\n",
     "travaux_rows = []\n",
@@ -372,7 +372,7 @@
     "prises_cumulees = 0\n",
     "\n",
     "\n",
-    "# 5) Boucle greedy + mutualisation \n",
+    "# Boucle greedy + mutualisation \n",
     "remaining = set(batiments[\"id_batiment\"])\n",
     "while remaining:\n",
     "    # coût incrémental par bâtiment \n",
@@ -414,7 +414,7 @@
     "            \"type_intervention\": \"reparation\"  \n",
     "        })\n",
     "\n",
-    "# 6) KPI ----------\n",
+    "# KPI \n",
     "longueur_reparee = float(infras[infras[\"infra_id\"].isin(repaired_infras)][\"longueur\"].sum())\n",
     "\n",
     "# Taux de mutualisation \n",
