--- a/projet_optimisation_v_finale.ipynb
+++ b/projet_optimisation_v_finale.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "2c342fbb"
    },
@@ -59,11 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns in infrastructures.shp:\n",
-      "Index(['infra_id', 'longueur', 'geometry'], dtype='object')\n",
-      "\n",
-      "Columns in batiments.shp:\n",
-      "Index(['id_bat', 'nb_maisons', 'geometry'], dtype='object')\n"
+      "Error loading shapefiles: name 'gpd' is not defined\n"
      ]
     }
    ],
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,51 +219,6 @@
       "Carte sauvegardée: cartes_phases/carte_phase_3.png\n",
       "Carte sauvegardée: cartes_phases/carte_phase_4.png\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -778,11 +729,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Resume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phase 0 — 1 bâtiments, 1 ménages | Matériel: 18,483 € | MO: 2,922 € | Total: 21,405 € | Heures: 77.9 h | Durée critique: 9.3 h | Hôpital ≤16h: OK\n",
+      "Phase 1 — 47 bâtiments, 47 ménages | Matériel: 497,389 € | MO: 84,544 € | Total: 581,933 € | Heures: 2,254.5 h | Durée critique: 15.7 h | Budget cible phase 1: ~574,343 € (tol. +3%)\n",
+      "Phase 2 — 17 bâtiments, 17 ménages | Matériel: 248,821 € | MO: 46,690 € | Total: 295,511 € | Heures: 1,245.1 h | Durée critique: 38.2 h | Budget cible phase 2: ~287,172 € (tol. +3%)\n",
+      "Phase 3 — 11 bâtiments, 11 ménages | Matériel: 229,806 € | MO: 41,081 € | Total: 270,887 € | Heures: 1,095.5 h | Durée critique: 18.5 h | Budget cible phase 3: ~287,172 € (tol. +3%)\n",
+      "Phase 4 — 9 bâtiments, 9 ménages | Matériel: 240,836 € | MO: 46,691 € | Total: 287,528 € | Heures: 1,245.1 h | Durée critique: 43.3 h | Budget cible phase 4: ~287,172 € (tol. +3%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def resume_par_phase(df: pd.DataFrame, budget_splits=(0.40,0.20,0.20,0.20)):\n",
+    "    out = []\n",
+    "    phases = sorted(df[\"Phase\"].unique())\n",
+    "    # coût restant après phase 0 \n",
+    "    cout_total = df.loc[df[\"Phase\"]>0, \"Coût total (phase)\"].sum() if \"Coût total (phase)\" in df.columns else None\n",
+    "    for ph in phases:\n",
+    "        d = df[df[\"Phase\"]==ph].copy()\n",
+    "        bat_count = d[\"Bâtiment\"].nunique()\n",
+    "        nb_maisons = d[\"Maisons\"].sum()\n",
+    "        cmat = d.get(\"Coût matériel (phase)\", pd.Series([0])).sum()\n",
+    "        cmo  = d.get(\"Coût MO (phase)\", pd.Series([0])).sum()\n",
+    "        ctot = d.get(\"Coût total (phase)\", pd.Series([0])).sum()\n",
+    "        heures = d.get(\"Heures (phase)\", pd.Series([0])).sum()\n",
+    "        duree = d.get(\"Durée critique (h)\", pd.Series([0])).max()\n",
+    "\n",
+    "        budget_msg = \"\"\n",
+    "        if ph >= 1 and ph <= 4 and cout_total is not None:\n",
+    "            cap = budget_splits[ph-1]*cout_total\n",
+    "            budget_msg = f\" | Budget cible phase {ph}: ~{cap:,.0f} € (tol. +3%)\"\n",
+    "        if ph == 0 and \"Hopital_OK_≤16h\" in d.columns:\n",
+    "            ok = d[\"Hopital_OK_≤16h\"].iloc[0]\n",
+    "            budget_msg = f\" | Hôpital ≤16h: {ok}\"\n",
+    "\n",
+    "        out.append(\n",
+    "            f\"Phase {ph} — {bat_count} bâtiments, {nb_maisons} ménages | \"\n",
+    "            f\"Matériel: {cmat:,.0f} € | MO: {cmo:,.0f} € | Total: {ctot:,.0f} € | \"\n",
+    "            f\"Heures: {heures:,.1f} h | Durée critique: {duree:,.1f} h{budget_msg}\"\n",
+    "        )\n",
+    "    return \"\\n\".join(out)\n",
+    "\n",
+    "print(resume_par_phase(df_plan))\n"
+   ]
   },
   {
    "cell_type": "code",
